Update README, scripts and config
The old context menu has been heavily rewritten so scripts/configuration have been added and/or changed to accomodate.

--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -34,7 +34,7 @@ MOUSE_BTN0 ignore
 # Toggle fullscreen (allows for both mpv and gnome-mpv)
 MOUSE_BTN0_DBL cycle fullscreen
 #MOUSE_BTN2 ignore
-MOUSE_BTN2 script-message contextmenu
+MOUSE_BTN2 script-message mpv_context_menu
 MOUSE_BTN3 no-osd seek 30
 MOUSE_BTN4 no-osd seek -30
 MOUSE_BTN5 add volume -2
