Update scripts and config
The mpvcontextmenu is updated, the navigator is no longer required with zenity dialogs to replace the functionality for opening files. The input.conf is tidied up.

--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -33,7 +33,6 @@
 MOUSE_BTN0 ignore
 # Toggle fullscreen (allows for both mpv and gnome-mpv)
 MOUSE_BTN0_DBL cycle fullscreen
-#MOUSE_BTN2 ignore
 MOUSE_BTN2 script-message mpv_context_menu
 MOUSE_BTN3 no-osd seek 30
 MOUSE_BTN4 no-osd seek -30
@@ -48,22 +47,6 @@ AXIS_DOWN  no-osd seek -30
 AXIS_LEFT  no-osd seek 5
 AXIS_RIGHT no-osd seek -5
 
-# Bomi > Open
-
-# Look at kdialog script and create zenity one
-# Open file
-#Ctrl+f 
-# Open location
-#Ctrl+g 
-# Add/append file to playlist
-#Ctrl+Shift+f 
-# Add/append location to playlist
-#Ctrl+Shift+g 
-# Save playlist
-#Ctrl+Shift+s 
-
-# Bomi > Play
-
 PLAY cycle pause
 PAUSE cycle pause
 PLAYPAUSE cycle pause
@@ -77,22 +60,17 @@ Ctrl+RIGHT playlist-next
 < playlist-prev
 > playlist-next
 
-# Bomi > Play > Speed
-
 # Scale playback speed by 5%
 - multiply speed 0.95
 = multiply speed 1.05
 # Reset speed to normal
 BS no-osd set speed 1.0 ; show-text "Play Speed - Reset"
 
-# Bomi > Play > A-B Repeat
-
 # Set/clear A-B loop points
 r ab-loop
 # Toggle infinite looping
-R cycle-values loop-file "inf" "no"
+# cycle-values loop-file "inf" "no"
 
-# Bomi > Play > Seek
 # Seek to beginning
 Ctrl+Home no-osd seek 0 absolute
 
@@ -122,12 +100,8 @@ PGDWN no-osd add chapter 1
 # title/edition?
 #E cycle edition                        # next edition
 
-# Bomi > Video
-
 # Cycle video track
 _ cycle video
-
-# Bomi > Video > Take Screenshot
 
 # Take a screenshot
 Ctrl+s async screenshot
@@ -138,20 +112,12 @@ Ctrl+Alt+s async screenshot window
 # Automatically screenshot every frame       
 Alt+Shift+s screenshot each-frame
 
-# Bomi > Video > Make Video Clip
-# Maybe use record-file somehow?
-
-# Bomi > Video > Aspect Ratio
 # Cycle video aspect ratios; "-1" is the container aspect
 #Ctrl+Shift+a cycle-values video-aspect "4:3" "16:10" "16:9" "1.85:1" "2.35:1" "-1" "-1"
 # Set video aspect to container aspect (Same as Source)
 Ctrl+Shift+r no-osd set video-aspect "-1" ; no-osd set video-aspect "-1" ; show-text "Video Aspect Ratio - Reset"
 Ctrl+Shift+a add video-aspect 0.001
 Ctrl+Shift+d add video-aspect -0.001
-
-# Bomi > Video > Crop
-
-# Bomi > Video > Zoom
 
 # Reset
 R no-osd set panscan 0 ; show-text "Pan/Scan - Reset"
@@ -161,11 +127,9 @@ G add panscan -0.001
 # Zoom in
 T add panscan +0.001
 
-# Bomi > Video > Rotate
 # cycle-values video-rotate "0" "90" "180" "270"
 # Reset
 # set video-rotate "0"
-# Bomi > Video > Screen Position
 
 # Reset
 X no-osd set video-pan-x 0 ; no-osd set video-pan-y 0 ; show-text "Video Pan - Reset"
@@ -177,25 +141,8 @@ A add video-pan-x -0.001
 W add video-pan-y -0.001
 S add video-pan-y 0.001
 
-# Bomi > Video > Screen Alignment
-
-# Bomi > Video > Color Space
-# Bomi > Video > Color Range
-# Bomi > Video > Quality Preset
-# Bomi > Video > Texture Format
-# Bomi > Video > Chroma Upscaler
-# Bomi > Video > Interpolater
-# Bomi > Video > Interpolater (Downscale)
-# Bomi > Video > High Quality Scaling
-# Bomi > Video > Dithering
-# Bomi > Video > Motion Smoothing
-# Bomi > Video > Deinterlacing
-
 # Toggle deinterlacer (automatically inserts or removes required filter)
 Ctrl+d cycle deinterlace
-
-# Bomi > Video > Filter
-# Bomi > Video > Adjust Color
 
 o no-osd set brightness 0 ; no-osd set contrast 0 ; no-osd set hue 0 ; no-osd set saturation 0 ; show-text "Colors - Reset"
 t add brightness  1
@@ -207,37 +154,16 @@ j add saturation -1
 i add hue  1
 k add hue -1
 
-# Bomi > Audio > Track
-
 # Switch audio streams
 Ctrl+a cycle audio
-
-# Bomi > Audio > Sync
 
 \ no-osd set audio-delay 0 ; show-text "Audio Sync - Reset"
 ] add audio-delay 0.100 
 [ add audio-delay -0.100
 
-# Bomi > Audio > Volume
-
 m cycle mute
 Shift+UP add volume 2
 Shift+DOWN add volume -2
-
-# Bomi > Audio > Amp
-# Bomi > Audio > Equalizer
-# Bomi > Audio > Channel Layout
-# Bomi > Audio > Visualization
-# Bomi > Audio > Normalizer
-
-n no-osd af toggle "lavfi=[alimiter=10:1:1:5:8000]" ; show-text "Normalize Toggle"
-
-# Bomi > Audio > Tempo Scalar
-
-# z is default in Bomi, so ignore it here now
-z ignore
-
-# Bomi > Subtitle > Track
 
 # Cycle through subtitles
 N cycle sub
@@ -246,11 +172,8 @@ Ctrl+Shift+n cycle sub down
 v cycle sub-visibility
 H cycle sub-visibility
 
-# Bomi > Subtitle > Override ASS
-# Bomi > Subtitle > Alignment
 # set sub-align-y "top"
 # set sub-align-y "bottom"
-# Bomi > Subtitle > Position
 
 # Reset
 Alt+s no-osd set sub-pos 100 ; no-osd set sub-scale 1 ; show-text "Subitle Position - Reset"
@@ -259,16 +182,11 @@ w add sub-pos -1
 # Move subtitles down
 s add sub-pos  1
 
-
-# Bomi > Subtitle > Scale
-
 # Reset - same as Position above, which does both
 # Increase scale by 1%
 L add sub-scale  0.01
 # Descrease scale
 K add sub-scale -0.01
-
-# Bomi > Subtitle > Sync
 
 # Reset
 q no-osd set sub-delay 0 ; show-text "Subtitle Delay - Reset"
@@ -276,20 +194,6 @@ q no-osd set sub-delay 0 ; show-text "Subtitle Delay - Reset"
 d add sub-delay +0.1
 # Subtract 100 ms delay from subs
 a add sub-delay -0.1
-
-# Bomi > Tools
-
-# Show preferences
-#p 
-
-# Bomi > Tools > Playlist 
-
-# Toggle playlist
-#l 
-
-# Bomi > Tools > History
-
-# Bomi > Window
 
 # Adjust window scale (perhaps look at autofit options here later)
 1 set window-scale 0.1
@@ -315,12 +219,9 @@ ENTER cycle fullscreen
 ESC set fullscreen no
 
 Ctrl+w quit-watch-later
-
-# Bomi (Quit)
-
 Ctrl+q quit-watch-later
 
-# Extra (Not Bomi)
+# Extra
 
 O no-osd cycle-values osd-level 3 2 1 0   # cycle through OSD mode (default is 3 1)
 # Stretch SSA/ASS subtitles with anamorphic videos to match historical
