--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -85,7 +85,7 @@ cscale=ewa_lanczossharp
 #audio-pitch-correction=no
 
 # Output 5.1 audio natively, and upmix/downmix audio with a different format.
-#audio-channels=5.1
+audio-channels=2.1
 # Disable any automatic remix, _if_ the audio output accepts the audio format.
 # of the currently played file. See caveats mentioned in the manpage.
 # (The default is "auto-safe", see manpage.)
