Update scripts and config
Update scripts and config to newest versions

--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -28,8 +28,6 @@
 # If this is enabled, treat all the following bindings as default.
 #default-bindings start
 
-# Modeled off of my bomi keybindings
-
 MOUSE_BTN0 ignore
 # Toggle fullscreen (allows for both mpv and gnome-mpv)
 MOUSE_BTN0_DBL cycle fullscreen
@@ -54,6 +52,7 @@ STOP stop
 NEXT playlist-next
 PREV playlist-prev
 SPACE cycle pause
+# This allows Ctrl+SPACE to work (as well as Ctrl+Shift+SPACE)
 Ctrl+Shift+SPACE stop
 Ctrl+LEFT playlist-prev
 Ctrl+RIGHT playlist-next
@@ -97,11 +96,11 @@ Alt+b script-binding skip_scene
 PGUP no-osd add chapter -1
 # Skip to next chapter
 PGDWN no-osd add chapter 1
-# title/edition?
-#E cycle edition                        # next edition
+# Change Title/Edition
+E cycle edition
 
 # Cycle video track
-_ cycle video
+# cycle video
 
 # Take a screenshot
 Ctrl+s async screenshot
@@ -244,6 +243,7 @@ J ignore
 @ ignore
 e ignore
 x ignore
+_ ignore
 
 # Defaults left as is for now
 # Do smaller, always exact (non-keyframe-limited), seeks with shift.
