Update scripts and config
Update scripts and config to the latest versions

--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -183,7 +183,7 @@ s add sub-pos  1
 
 # Reset - same as Position above, which does both
 # Increase scale by 1%
-L add sub-scale  0.01
+J add sub-scale  0.01
 # Descrease scale
 K add sub-scale -0.01
 
@@ -193,6 +193,9 @@ q no-osd set sub-delay 0 ; show-text "Subtitle Delay - Reset"
 d add sub-delay +0.1
 # Subtract 100 ms delay from subs
 a add sub-delay -0.1
+
+# Clear playlist (except for currently playing file)
+L playlist-clear
 
 # Adjust window scale (perhaps look at autofit options here later)
 1 set window-scale 0.1
@@ -237,7 +240,6 @@ Alt+Shift+r no-osd set speed 1.0 ; no-osd set panscan 0 ; no-osd set video-pan-x
 # Ignore some of the defaults that we haven't used or have replaced
 Ctrl++ ignore
 Ctrl+- ignore
-J ignore
 * ignore
 ! ignore
 @ ignore
