Update scripts and configs
Update the scripts and configs to the latest version! Most of the time this just reflects when I've updated the mpvcontextmenu stuff.

--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -29,9 +29,9 @@
 #default-bindings start
 
 MOUSE_BTN0 ignore
-# Toggle fullscreen (allows for both mpv and gnome-mpv)
 MOUSE_BTN0_DBL cycle fullscreen
-MOUSE_BTN2 script-message mpv_context_menu
+MOUSE_BTN2 script-message mpv_context_menu_tk
+MENU script-message mpv_context_menu_gtk
 MOUSE_BTN3 no-osd seek 30
 MOUSE_BTN4 no-osd seek -30
 MOUSE_BTN5 add volume -2
