Update scripts and config
Update the scripts and configuration files to the latest version.

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -39,6 +39,10 @@
 #autofit-larger=90%x90%
 # Keep maximised when loading
 autofit=0
+# For KDE particularly, don't keep window aspect (add black bars)
+no-keepaspect-window
+# Don't disable compositing on fullscreen
+#x11-bypass-compositor=no
 
 # Do not close the window on exit.
 #keep-open=yes
@@ -120,9 +124,11 @@ cache=yes
 
 # Display English subtitles if available.
 #slang=en
+slang=English,eng,en
 
 # Play Finnish audio if available, fall back to English otherwise.
 #alang=fi,en
+alang=Japanese,jpn,ja,English,eng,en
 
 # Change subtitle encoding. For Arabic subtitles use 'cp1256'.
 # If the file seems to be valid UTF-8, prefer UTF-8.
